# rust-keyutils

./: .cirrus.yml  .codecov.yml  .license.template  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.ci/: tarpaulin.sh
keyutils-raw/: Cargo.toml  build.rs
keyutils-raw/src/: constants.rs  functions.rs  lib.rs  types.rs
libkeyutils-sys/: Cargo.toml
libkeyutils-sys/src/: constants.rs  functions.rs  lib.rs  types.rs
src/: api.rs  constants.rs  ffi.rs  keytype.rs  lib.rs
src/keytypes/: asymmetric.rs  big_key.rs  blacklist.rs  dns_resolver.rs  encrypted.rs  keyring.rs  logon.rs  mod.rs  rxrpc.rs  rxrpc_s.rs  trusted.rs  user.rs
src/keytypes/data/ca/: .gitignore  Makefile  ca-1.root.crt.der  ca-1.term.crt.der  ca-2.root.crt.der  ca.intermediate.crt.der  intermediate.term.crt.der  openssl.cnf  self.term.crt.der
src/tests/: add.rs  clear.rs  describe.rs  instantiate.rs  invalidate.rs  keytype.rs  link.rs  mod.rs  newring.rs  permitting.rs  pkey.rs  privkey.pk8  reading.rs  revoke.rs  search.rs  session.rs  timeout.rs  unlink.rs  update.rs
src/tests/utils/: kernel.rs  keys.rs  mod.rs
tests/: join_anonymous_session.rs  join_existing_named_session.rs  join_new_named_session.rs
