[package]
name = "keyutils"
version = "0.4.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD-3-Clause"
description = "Rust interface to the Linux keyring."
repository = "https://github.com/mathstuf/rust-keyutils.git"
homepage = "https://github.com/mathstuf/rust-keyutils"
documentation = "https://docs.rs/keyutils"
readme = "README.md"
edition = "2018"

[workspace]
members = ["keyutils-raw"]

[dev-dependencies]
lazy_static = "1"
regex = "1"
serial_test = "*"
serial_test_derive = "*"
semver = "*"

[dependencies]
bitflags = "1.0.4"
errno = "0.2"
keyutils-raw = { path = "keyutils-raw" }
log = "0.4.4"

libc = "0.2"
