[package]
name = "keyutils-raw"
version = "0.4.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD-3-Clause"
description = "Raw bindings to Linux keyring syscalls"
repository = "https://github.com/mathstuf/rust-keyutils.git"
homepage = "https://github.com/mathstuf/rust-keyutils"
keywords = ["keyutils"]
edition = "2018"

[dependencies]
log = "0.4.4"

errno = "0.2"
libc = "0.2"
uninit = "0.3"
