[package]
name = "libkeyutils-sys"
version = "0.3.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD-3-Clause"
description = """
FFI bindings to libkeyutils.
"""
repository = "https://github.com/mathstuf/rust-keyutils.git"
homepage = "https://github.com/mathstuf/rust-keyutils.git"
documentation = "https://docs.rs/libkeyutils-sys/~0.3"
keywords = ["keyutils"]
links = "keyutils"

[dependencies]
libc = "~0.2"
